--- a/heroes.html
+++ b/heroes.html
@@ -14,6 +14,11 @@
         <li>Avispa</li>
         <li>Hormiga</li>
     </ul>
-    
+    <h1>Nuevos Vengadores</h1>
+    <ul>
+        <li></li>
+        <li></li>
+        <li>Pantera negra</li>
+    </ul>
 </body>
 </html>
