Revert "¡Chasquido de Thanos! (v1)"
This reverts commit 8b4fa4aa624066fcad265bb50683d47b9e577d91.

--- a/heroes.html
+++ b/heroes.html
@@ -9,15 +9,16 @@
     <h1>Vengadores Fundadores</h1>
     <ul>
         <li>Iron Man</li>
-        
+        <li>Thor</li>
         <li>Hulk</li>
-
+        <li>Avispa</li>
+        <li>Hormiga</li>
     </ul>
     <h1>Nuevos Vengadores</h1>
     <ul>
         <li>Capitan America</li>
-
-        
+        <li>Viuda negra</li>
+        <li>Pantera negra</li>
     </ul>
 </body>
 </html>
